# vault

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  Anchor.toml  Cargo.toml  DESIGN_DECISIONS.md  GLOSSARY.md  README.md  SECURITY.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  devnet-deploy.yml  format.yml  idl-check.yml  security.yml  stale.yml  test.yml
apps/demo/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/: .env.local.example  .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
apps/web/src/: App.tsx  (+2 more)
audits/: AUDIT_STATUS.md
clients/rust/: Cargo.toml
clients/rust/async_vault/: Cargo.toml
clients/rust/async_vault/src/: cu_tracker.rs  lib.rs
clients/rust/async_vault/src/extensions/: fee.rs  min_redemption.rs  min_subscription.rs  mod.rs  pausable_redemptions.rs  pausable_subscriptions.rs  redemption_queue.rs  subscription_queue.rs
clients/rust/dummy/: Cargo.toml
clients/rust/dummy/src/: lib.rs
clients/rust/hook/: Cargo.toml
clients/rust/hook/src/: lib.rs
clients/rust/vault/: Cargo.toml
clients/rust/vault/src/: lib.rs
clients/typescript/: package.json  tsconfig.json
idl/: async_vault.json
integration-tests/: Cargo.toml
integration-tests/src/: async_helper_functions.rs  cu_map_guard.rs  helper_functions.rs  lib.rs
integration-tests/src/async_vault/: approve_request.rs  cancel_request.rs  claim.rs  constants.rs  create_deposit_request.rs  create_redeem_request.rs  create_vault.rs  fee_extensions.rs  helper_functions.rs  initialize_vault.rs  mod.rs  reject_request.rs  set_operator.rs  update_async_vault.rs  update_authority.rs  update_vault_nav.rs  withdraw_assets.rs
integration-tests/src/async_vault/extenstions/: fees.rs  min_redemption.rs  min_subscription.rs  mod.rs  pausable_redemptions.rs  pausable_subscriptions.rs  redemption_queue.rs  subscription_queue.rs
integration-tests/src/vault/: close_vault.rs  constants.rs  create_vault.rs  deposit.rs  deposit_hook.rs  donate_assets.rs  fee_extensions.rs  helper_functions.rs  mint.rs  mint_hook.rs  mod.rs  redeem.rs  update_vault.rs  withdraw.rs  withdraw_hook.rs
programs/async_vault/: Cargo.toml
programs/async_vault/docs/: SEQUENCES.md
programs/async_vault/docs/extensions/: SubscriptionQueue.md
programs/async_vault/extensions/: SubscriptionQueue.md
programs/async_vault/src/: error.rs  lib.rs  utils.rs
programs/async_vault/src/extensions/: constants.rs  mod.rs  request_extensions.rs  tlv.rs  vault_extensions.rs
programs/async_vault/src/extensions/fee/: processor.rs
programs/async_vault/src/extensions/fee/instructions/: initialize_deposit_fee.rs  initialize_withdrawal_fee.rs  mod.rs  update_deposit_fee.rs  update_withdrawal_fee.rs
programs/async_vault/src/extensions/fifo_queues/: fifo_queue.rs  mod.rs  skip_canceled_queue_request.rs
programs/async_vault/src/extensions/min_redemption/: processor.rs
programs/async_vault/src/extensions/min_redemption/instructions/: initialize_min_redemption.rs  mod.rs  update_min_redemption.rs
programs/async_vault/src/extensions/min_subscription/: processor.rs
programs/async_vault/src/extensions/min_subscription/instructions/: initialize_min_subscription.rs  mod.rs  update_min_subscription.rs
programs/async_vault/src/extensions/pausable_redemptions/: mod.rs  processor.rs
programs/async_vault/src/extensions/pausable_redemptions/instructions/: initialize_pausable_redemptions.rs  mod.rs  update_pausable_redemptions.rs
programs/async_vault/src/extensions/pausable_subscriptions/: processor.rs
programs/async_vault/src/extensions/pausable_subscriptions/instructions/: initialize_pausable_subscriptions.rs  mod.rs  update_pausable_subscriptions.rs
programs/async_vault/src/extensions/pausable_subscriptions_and_redemptions/: processor.rs
programs/async_vault/src/extensions/redemption_queue/: processor.rs
programs/async_vault/src/extensions/redemption_queue/instructions/: cancel_queued_redemption_request.rs  initialize_redemption_queue.rs  mod.rs
programs/async_vault/src/extensions/subscription_queue/: processor.rs
programs/async_vault/src/extensions/subscription_queue/instructions/: cancel_queued_deposit_request.rs  initialize_subscription_queue.rs  mod.rs  skip_canceled_subscription_request.rs
programs/async_vault/src/instructions/: accept_authority_invitation.rs  approve_request.rs  cancel_request.rs  claim.rs  create_deposit_request.rs  create_redeem_request.rs  create_vault.rs  initialize_deposit_fee.rs  initialize_pausable_redemptions_extension.rs  initialize_pausable_subscription_extension.rs  initialize_vault.rs  initialize_withdrawal_fee.rs  invite_new_authority.rs  mod.rs  pause_redemption.rs  pause_subscription.rs  reject_request.rs  set_operator.rs  update_deposit_fee.rs  update_nav.rs  update_vault.rs  update_withdrawal_fee.rs  withdraw_assets.rs
programs/async_vault/src/state/: async_vault.rs  constants.rs  fee.rs  mod.rs  request.rs
programs/vault/: Cargo.toml
programs/vault/src/: error.rs  lib.rs
programs/vault/src/extensions/: deposit_hook.rs  extra_meta_accounts.rs  hook_program.rs  mod.rs  vault_extension.rs  withdraw_hook.rs
programs/vault/src/instructions/: close_vault.rs  create_vault.rs  deposit.rs  donate_assets.rs  initialize_deposit_fees.rs  initialize_deposit_hook_extension.rs  initialize_vault.rs  initialize_withdraw_hook_extension.rs  initialize_withdrawal_fees.rs  mint.rs  mod.rs  redeem.rs  update_deposit_fees.rs  update_vault.rs  update_withdrawal_fees.rs  vault_common.rs  withdraw.rs
programs/vault/src/instructions/extra_meta_accounts/: initialize_deposit_extra_meta_accounts.rs  mod.rs
programs/vault/src/state/: constants.rs  extra_meta_accounts.rs  fee.rs  mod.rs  vault.rs  vault_common.rs  vault_config.rs
scripts/: generate-clients.mjs  generate-clients.ts  generate-ts-client.ts
(+110 files in other folders)
