[workspace]
members = [
    "clients/rust/*",
    "integration-tests",
    "libs/vault_common",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
borsh = "1.5"
litesvm = "0.7.1"
solana-sdk = "2.2.1"
sha2 = "0.10"
sha2-const-stable = "0.1"
# Pin blake3 to fix edition error
blake3 = "=1.5.5"
test-case = "3.3.1"
solana-instruction = "2.0"
spl-discriminator = "0.4.0"
spl-tlv-account-resolution = "0.10.0"
solana-account-info = "2.0"
solana-pubkey = { version = "4.2", features = ["borsh"] }
spl-token = "8.0.0"
vault_common = { path = "libs/vault_common" }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.12"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
