[workspace]
members = [
    "clients/rust/*",
    "integration-tests",
    "libs/vault_common",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "=1.0.2", features = ["init-if-needed"] }
anchor-spl = "=1.0.2"
borsh = "1.5.7"
litesvm = "0.12"
solana-sdk = "3"
test-case = "3.3.1"
solana-pubkey = { version = "3", features = ["borsh"] }
spl-token = "9"
vault_common = { path = "libs/vault_common" }
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "2.0.12"
bytemuck = { version = "1", features = ["derive"] }

# Tell solana-verify which Agave build image to use. It checks this BEFORE
# falling back to Cargo.lock heuristics. We pin to 3.1.14 to match
# Anchor.toml's [toolchain] solana_version and to get a build image with
# a Cargo new enough for edition 2024 (required by base64ct >= 1.8).
[workspace.metadata.cli]
solana = "3.1.14"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
