[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
vault-client = { path = "../clients/rust/vault", features = ["solana-sdk"] }
async-vault-client = { path = "../clients/rust/async_vault", features = ["solana-sdk", "litesvm"] }
hook-client = { path = "../clients/rust/hook", features = ["solana-sdk"] }
dummy-client = { path = "../clients/rust/dummy", features = ["solana-sdk"] }
borsh.workspace = true
litesvm.workspace = true
solana-sdk.workspace = true
anchor-spl.workspace = true
test-case.workspace = true
spl-token.workspace = true