[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
async-vault-client = { path = "../clients/rust/async_vault", features = ["solana-sdk", "litesvm"] }
borsh.workspace = true
litesvm.workspace = true
solana-sdk.workspace = true
solana-system-interface = "3"
anchor-spl.workspace = true
test-case.workspace = true
spl-token.workspace = true