[package]
name = "async_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[toolchain]
solana_version = "3.1.14"

[lib]
crate-type = ["cdylib", "lib"]
name = "async_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
vault_common.workspace = true
bytemuck.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
