[package]
name = "async-vault-client"
version = "0.1.0"
edition = "2021"
description = "Generated Rust client for the async vault program"

[features]
default = []
serde = ["dep:serde"]
solana-sdk = ["dep:solana-sdk"]
litesvm = ["dep:litesvm"]

[dependencies]
borsh = { workspace = true, features = ["derive"] }
litesvm = { workspace = true, optional = true }
solana-account-info = "2.0"
solana-cpi = "2.0"
solana-instruction = "3.4"
solana-program-error = "2.0"
solana-pubkey = { version = "2.0", features = ["borsh"] }
serde = { version = "1.0", features = ["derive"], optional = true }
solana-sdk = { workspace = true, optional = true }
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true
