[package]
name = "async-vault-client"
version = "0.1.0"
edition = "2021"
description = "Generated Rust client for the async vault program"

[features]
default = []
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang/idl-build"]
fetch = ["dep:solana-account", "dep:solana-rpc-client"]
serde = ["dep:serde"]
solana-sdk = ["dep:solana-sdk"]
litesvm = ["dep:litesvm", "dep:tabled", "dep:dtor"]

[dependencies]
borsh = { workspace = true, features = ["derive"] }
litesvm = { workspace = true, optional = true }
tabled = { version = "0.21", optional = true }
dtor = { version = "1.0", optional = true }
solana-address = "2.2"
solana-account-info = "3"
solana-cpi = "3"
solana-instruction = "3"
solana-program-error = "3"
solana-pubkey = { workspace = true }
solana-account = { version = "4", optional = true }
solana-rpc-client = { version = "3", optional = true }
anchor-lang = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
solana-sdk = { workspace = true, optional = true }
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true
